# catenary-backend

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Chart.yaml  add-realtime-feeds.csv  algo-for-fetching-departures-for-stop.md  bootstrap.toml  build.rs  catenaryconfig.toml  check_output.txt  check_output_10.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_6.txt  check_output_7.txt  check_output_8.txt  check_output_9.txt  clone-transitland.sh  compile_log.txt  compiler_output.txt  diesel.toml  docker-compose.yml  download_anteater_express.sh  error_log_3.txt  example.catenaryconfig.toml  filter-socal-test.sh  globeflower_clusters.geojson  gtfs_schedules.csv  gtfs_schedules_metrolink.csv  harebell_viewer.html  install_rust.sh  martin-nginx.conf  martin.yaml  ped_bike_routing_filter_file.txt  ped_bike_routing_filter_file_drop.txt  readme.md  (+77 more)
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.githooks/: commit-msg  fmt.sh  pre-commit
.github/workflows/: build-artifacts.yml  daily-test-pipeline.yml  deploy.yaml  full-test-pipeline.yml  manual-test-pipeline.yml  release-compiled-zip  release.yml  rust-clippy.yml  rust.yml  shizuoka.yaml
.sqlx/: query-06f8fc8482d74137790035a3928fe69773627ee35797090857b6a028277f9393.json  query-13bd167d66e1b9f451aafe10969ac688e68fba7199ef688f215fbd8cc0cd121b.json  query-3dbd6ae1c082a63a0e34caf7fc6cea7c69fc442b695e9ca4be96a34217813cbc.json  query-460cdf3bb55cfd6169c0bcbc261480fbc7fe0a14dcc9c1951efd52c0df4fbc43.json  query-585bfdb2b6b29cb48f3e3b5b21eca259755137048d260b68fe4f7319c4e2f650.json  query-639ae7e6e8d11ef2ef4591590e93465924b0106278b647458de8da353c138ff8.json  query-667ab5fee77cddd3076e341abf6c142b8f367d67063ad62254dae0b1756e27dc.json  query-6dfb78bb3b31d8fda3dbd46e61684153a73cbfe5b32cb1a81f7238bf6fae1f4d.json  query-72257b04d05772e11b622816a780361eb16c85f67f6badbfaac2e144b017c4c2.json  query-74c6f972d37704195bebba02bc34faadd70b0bb3fe49b9c3535bfebcb4363942.json  query-9d543526745954bdac5ac7d9608066b2fe0b2e478f220eebc78b932b70a81b7e.json  query-9ef4abb74685dc6fb83d8a2965ab87ee60646e7c61ba4553f705eb2bfd00d5ff.json  query-ad4d38e84a6a799a3859a3fa52f3f6bb03b0f042164a833fa1c28f46cc861b22.json  query-ba8d15394cd81a8e29d08e6b116ba89738a385e6c9501c35a1ed4db3fb3a3b69.json  query-d60b530deab892b1bb76b63c20081ae5e26ad95537d3ddf5da17b77143b1b605.json  query-e12faf0604a99d630b72854d60eb6770a003ef2235f22f03ebe620af623d367d.json  query-e5cad65f469fe78fb3300ca34b26d34242143feec3c63e3a86ed227c49854d72.json  query-ecb7df98d809e543191489e5bec460a0dd8a70b6c30fd61ae3f85d4b6b7c7378.json  query-f398b3dc4909f44399ca79369872ba8241edaa86e77087b3375434db82c7b482.json  query-f6a901b2bb7d2c9b7f406fe3b5034ed5f97eee2a197b329a7d36692991fa38bd.json
catenary-helm/: Chart.yaml  values.yaml
catenary-helm/templates/: ingress.yaml  service.yaml  serviceaccount.yaml
containers/alpenrose/: Dockerfile
containers/aspen/: Dockerfile
containers/birch/: Dockerfile
containers/common/: docker-compose.yml
containers/edelweiss/: Dockerfile  docker-compose.yml
containers/maple/: Dockerfile
containers/test_graph_gen/: Dockerfile  README.md  cleanup_test.sh  docker-compose.yml  run_gentian_combined.sh  run_gentian_only.sh  run_queries_local.sh  run_test.sh  test_update_workflow.sh  update_graph.sh
data/aspen_data/: test_chateau.bin.zlib  test_skip_cache.bin.zlib
examples/: check_alerts_html.rs
helm/templates/: NOTES.txt  deployment.yaml
k8s/: config.yaml  http_server.yaml  notes.md  values.yaml
migrations/: 20240107005202_init.sql  20240110110356_init.sql  20240325090622_shapefunctions.sql
migrations/2024-03-26-004608_init/: down.sql  up.sql
migrations/2024-04-06-053500_timetable-compression-v1/: down.sql  up.sql
migrations/2024-04-24-222354_index_itin_meta/: down.sql  up.sql
migrations/2024-04-24-231854_trip-index/: down.sql  up.sql
migrations/2024-05-06-204936_trips_compression_fix/: down.sql  up.sql
migrations/2024-05-10-011829_add_gtfs_stop_sequence/: down.sql  up.sql
migrations/2024-05-12-051831_stop_indexes/: down.sql  up.sql
migrations/2024-05-12-052743_itin-stops-index/: down.sql  up.sql
migrations/2024-06-05-212335_feed_id_index/: down.sql  up.sql
migrations/2024-06-08-072911_interpolated-trips/: down.sql  up.sql
migrations/2024-06-12-071029_allow_stop_to_stop_shape/: down.sql  up.sql
migrations/2024-06-28-064334_stop_to_stop_generated_for_not_bus/: down.sql  up.sql
migrations/2024-07-19-064909_ip_addr/: down.sql  up.sql
migrations/2024-07-24-092005_shapes_chateau_shape_id_index/: down.sql  up.sql
migrations/2024-07-28-220844_route_type_to_direction_patterns/: down.sql  up.sql
migrations/2024-08-05-235635_itinerary_pattern_meta_idx_with_itinerary_pattern_id/: down.sql  up.sql
migrations/2024-08-07-000900_new_shapes_system/: down.sql  up.sql
migrations/2024-08-18-011117_change_calendar_date_pg/: down.sql  up.sql
migrations/2024-08-19-200139_itinerary_stop_id_index/: up.sql
migrations/2024-08-19-223309_remove_extra_index/: down.sql  up.sql
migrations/2024-08-22-065540_new_tuple_for_itin_lookup/: up.sql
migrations/2024-09-03-191840_make_better_itin_idx/: down.sql  up.sql
migrations/2024-09-05-200831_add_direction_id/: down.sql  up.sql
migrations/2024-10-31-142956_add_realtime_urls/: down.sql  up.sql
migrations/2024-11-01-080726_tile_cache/: down.sql  up.sql
migrations/2025-02-09-201402_calendar_idx/: down.sql  up.sql
src/: aspen_dataset.rs  catenaryconfig.rs  compact_formats.rs  connections_lookup.rs  consist_v1.rs  custom_pg_types.rs  database.rs  enum_to_int.rs  etcd_cache.rs  etcd_notes.md  formation_v1.rs  genentech_auth.rs  graph_formats.rs  grid.rs  gtfs_schedule_proto.proto  hashfolder.rs  http-server.rs  hull.rs  lib.rs  main.rs  metrolink_ptc_to_stop_id.rs  models.rs  mta_gtfs_rt.rs  postgis_to_diesel.rs  proxy_pool.rs  santa_cruz.rs  schema.rs  stop_matching.rs  test_dmfr.rs  tile_save_and_get.rs  timestamp_extraction.rs  travic_types.rs  trip_logic.rs  twitter_alerts.rs
src/alpenrose/: README.md  (+4 more)
templates/: _helpers.tpl  hpa.yaml
(+362 files in other folders)
