[package]
name = "catenary-backend"
version = "0.3.0"
edition = "2021"

[library]
name = "catenary"

[build]
rustflags = ["-Z", "threads=8"]

[lints.rust]
unused_must_use = "deny"
non_ascii_idents = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
crossbeam-utils = "0.8.16"
memoffset = "0.9.0"
time = "0.3.30"
rouille = "3.0"
gtfs-rt = "0.5.0"
reqwest = {version = "0.11", features = ["gzip","brotli","rustls-tls","deflate","cookies","mime_guess"]}
protobuf = "3.3"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33", features = ["full"] }
futures = "0.3"
gtfs-structures = "0.41.2"
tungstenite = "0.21.0"
postgres = "0.19.7"
postgis = "0.9.0"
arguments = "0.7.2"
tokio-postgres = { version = "0.7.10", features = [
    "array-impls",
    "with-geo-types-0_7",
] }
rust_decimal = "1.32.0"
serde_json = "1.0.107"
actix-web = "4.4.0"
regress = "0.9"
color-eyre = {version = "0.6.2", features = ["url", "issue-url"]}
fasthash = "0.4.0"
rgb = "0.8.36"
clap = {version = "4.4.7", features = ["derive"]}
itertools = "0.12.0"
fs_extra = "1.3.0"
r2d2 = "0.8.10"
bb8 = "0.8.1"
threadpool = "1.8.1"
tokio-threadpool = "0.1.18"
qstring = "0.7.2"
rand = "0.8.5"
titlecase = "2.2.1"
rayon = "1.8.0"
chrono = "0.4.31"
geo-types = "0.7.11"
geo-postgis = "0.2.2"
geo = "0.28.0"
tarpc = {version = "0.34.0", features = ["full"]}
anyhow = "1.0.75"
tracing = "0.1.40"
service = "0.0.0"
tokio-serde = "0.9"
tracing-subscriber = "0.3.17"
futures-util = "0.3.29"
actix_block_ai_crawling = "0.2.8"
actix = "0.13.1"
actix-web-actors = "4.2.0"
amtk = "0.1.0"
travelling_salesman = "1.1.22"
ordered-float = "4.2.0"
dotenvy = "0.15.7"
seahash = "4.1.0"
dmfr = "0.1.0"
chateau = {git = "https://github.com/catenarytransit/chateau"}
dmfr-folder-reader = {git = "https://github.com/catenarytransit/dmfr-folder-reader"}
tokio-zookeeper = "0.2.1"
uuid = {version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
zip = "0.6.6"
git2 = "0.18.3"
zip-extract = "0.1.3"
serde_derive = "1.0.197"
prost = "0.11.9"
geozero = "0.12.0"
diesel = {version = "2.1.5", features = ["extras", "url", "numeric", "r2d2"]}
postgis_diesel = "2.3.0"
diesel-async = {version = "0.4.1", features = ["postgres", "bb8"]}
diesel-derive-newtype = "2.1.1"
async-std = {version = "1.5.3"}
geo-repair-polygon = "0.1.2"
gtfs-translations = "0.1.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
rstar = "0.12.0"
sqlx = {version = "0.7.4", features = ["postgres","runtime-tokio", "macros"]}
tilejson = "0.4.1"
tile-grid = "=0.2.2"
zstd-safe = "7.1.0"
hitbox = "0.1.1"
cached = "0.49.2"
geo-booleanop = "0.3.2"
geo-clipper = "0.8.0"
random-string = "1.1.0"
argon2 = "0.5.3"

[[bin]]
name = "maple"
path = "src/maple/main.rs"

[[bin]]
name = "birch"
path = "src/birch/server.rs"

[[bin]]
name = "aspen"
path = "src/aspen/main.rs"

[lib]
name = "catenary"
path = "src/lib.rs"

[[bin]]
name = "spruce"
path = "src/spruce/main.rs"

#Test binaries

[[bin]]
name = "test_maple_syrup"
path = "src/maple_syrup/test.rs"

[[bin]]
name = "alpenrose"
path = "src/alpenrose/main.rs"
