[package]
name = "catenary-backend"
version = "0.4.0"
edition = "2021"
authors = ["Kyler Chin <kyler@catenarymaps.org>"]

[library]
name = "catenary"

[lints.rust]
unused_must_use = "deny"
non_ascii_idents = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
crossbeam-utils = "0.8.21"
memoffset = "0.9.1"
time = "0.3.37"
rouille = "3.0"
reqwest = {version = "0.12", features = ["gzip","brotli","rustls-tls","deflate","cookies","multipart"]}
protobuf = "3.7.1"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full", "tracing"] }
futures = "0.3"
gtfs-structures = "0.43.0"
geofabrik-handler = {git = "https://github.com/catenarytransit/geofabrik-catenary-handler/"}
tungstenite = "0.26.0"
postgres = "0.19.7"
postgis = "0.9.0"
arguments = "0.8.0"
tokio-postgres = { version = "0.7.10", features = [
    "array-impls",
    "with-geo-types-0_7",
] }
rust_decimal = "1.32.0"
serde_json = "1.0.107"
actix-web = "4.4.0"
regress = "0.10"
color-eyre = {version = "0.6.2", features = ["url", "issue-url"]}
itertools = "0.14.0"
fs_extra = "1.3.0"
r2d2 = "0.8.10"
bb8 = "0.8.5"
threadpool = "1.8.1"
tokio-threadpool = "0.1.18"
qstring = "0.7.2"
rand = "0.9.0"
titlecase = "3.2"
rayon = "1.8.0"
chrono = "0.4.31"
geo-types = "0.7.15"
geo-postgis = "0.2.2"
geo = "0.29.3"
tarpc = {version = "0.35.0", features = ["full"]}
anyhow = "1.0.75"
tracing = "0.1.40"
tokio-serde = "0.9"
tracing-subscriber = "0.3.17"
futures-util = "0.3.29"
actix_block_ai_crawling = "0.2.8"
actix = "0.13.5"
actix-web-actors = "4.2.0"
amtk = "0.1.0"
travelling_salesman = "1.1.22"
ordered-float = "4.2.0"
dotenvy = "0.15.7"
seahash = "4.1.0"
dmfr = "0.2"
chateau = {git = "https://github.com/catenarytransit/chateau"}
dmfr-dataset-reader = "0.2.4"
uuid = {version = "1.13.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
zip = "2.2"
git2 = "0.20"
zip-extract = "0.2.1"
serde_derive = "1.0.197"
prost = "0.13"
geozero = "0.14.0"
diesel = {version = "2.2.7", features = ["ipnet-address","network-address","extras", "numeric", "r2d2"]}
postgis_diesel = "2.3.0"
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
diesel-derive-newtype = "2.1.1"
async-std = {version = "1.5.3"}
geo-repair-polygon = "0.1.2"
gtfs-translations = "0.1.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
rstar = "0.12.2"
sqlx = {version = "0.8", features = ["postgres","runtime-tokio", "macros"]}
tilejson = "0.4.1"
tile-grid = "0.6"
zstd-safe = "7.2.1"
hitbox = "0.1.1"
cached = { version = "0.54", features = ["async_tokio_rt_multi_thread", "disk_store"] }
geo-booleanop = "0.3.2"
geo-clipper = "0.8.0"
random-string = "1.1.0"
argon2 = "0.5.3"
tzf-rs = "0.4.10"
lazy_static = "1.4.0"
serde_bytes = "0.11.14"
bincode = "1.3.3"
evmap = "10.0.2"
dashmap = "6.0"
ipnetwork = "0.21.1"
pnet = "0.35.0"
crossbeam = "0.8.4"
leapfrog = { version = "0.3.0", features = ["stable_alloc"] }
scc = "2.3.3"
env_logger = "0.11.3"
ron = "0.8.1"
regex = "1.10.4"
fasthash = "0.4.0"
clap = "4.5.28"
rgb = "0.8.37"
zotgtfs = "0.3.7"
amtrak-gtfs-rt = "0.5.2"
chrono-tz = { version = "0.10.1", features = ["case-insensitive", "serde"] }
ping = "0.5.2"
online = { version = "4.0.2", features = ["tokio-runtime"] }
chicago-gtfs-rt = "0.2.2"
etcd-client = "0.14.1"
ipnet = { version = "2.9.0", features = ["serde"] }
flate2 = "1.0.30"
tar = "0.4.41"
bytes = "1.10.0"
polyline = "0.11.0"
simple-server-timing-header = "0.1.1"
osmpbfreader = "0.17.0"
mime = "0.3.17"
gtfs-realtime = "0.1.3"
via-rail-gtfsrt = "0.1.2"
wyhash2 = "0.2.1"
console-subscriber = "0.4.0"
strumbra = "0.5.1"
compact_str = { version = "0.8.0", features = ["serde", "diesel"] }
urlencoding = "2.1.3"
url = "2.5.2"
slippy-map-tiles = "0.16.0"
geo-buffer = "0.2.0"
actix-cors = "0.7.0"
finite = "0.0.1"
scraper = { version = "0.22.0", features = ["atomic"] }
html-escape = "0.2.13"
[[bin]]
name = "maple"
path = "src/maple/main.rs"

[[bin]]
name = "birch"
path = "src/birch/server.rs"

[[bin]]
name = "aspen"
path = "src/aspen/main.rs"

[lib]
name = "catenary"
path = "src/lib.rs"

[[bin]]
name = "spruce"
path = "src/spruce/main.rs"

#Test binaries

[[bin]]
name = "test_maple_syrup"
path = "src/maple_syrup/test.rs"

[[bin]]
name = "alpenrose"
path = "src/alpenrose/main.rs"

[build-dependencies]
prost-build = "0.13"

[[bin]]
name = "manual_login_manager"
path = "src/manual_login_manager/main.rs"

#[[bin]]
#name = "test_tarpc"
#path = "src/test_tarpc/main.rs"

[[bin]]
name = "sage"
path = "src/sage/main.rs"

[[bin]]
name = "setup_ip_db"
path = "src/ip_addr_geo_db_update/main.rs"

[[bin]]
name = "test_dmfr"
path = "src/test_dmfr.rs"

[[bin]]
name = "osm_extractor"
path = "src/osm_extractor/main.rs"
