[package]
name = "catenary-backend"
version = "0.4.0"
edition = "2024"
authors = ["Kyler Chin <kyler@catenarymaps.org>"]


[lints.rust]
unused_must_use = "deny"
non_ascii_idents = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
good_lp = { version = "1.0", features = ["coin_cbc"] }
mvt = "0.10"
ahash = { version = "0.8.12", features = ["serde"] }
crossbeam-utils = "0.8.21"
memoffset = "0.9.1"
time = "0.3"
rouille = "3.0"
reqwest = { version = "0.12", features = [
    "gzip",
    "brotli",
    "rustls-tls",
    "deflate",
    "cookies",
    "multipart",
    "blocking",
] }
protobuf = "3.7.2"
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["full", "tracing"] }
futures = "0.3"
gtfs-structures = "0.46.1"
geofabrik-handler = { git = "https://github.com/catenarytransit/geofabrik-catenary-handler/" }
tungstenite = "0.28.0"
postgres = "0.19.7"
postgis = "0.9.0"
arguments = "0.8.0"
tokio-postgres = { version = "0.7.16", features = [
    "array-impls",
    "with-geo-types-0_7",
] }
rust_decimal = "1.32.0"
serde_json = "1.0"
actix-web = "4.12"
regress = "0.10"
color-eyre = { version = "0.6.5", features = ["url", "issue-url"] }
itertools = "0.14.0"
fs_extra = "1.3.0"
r2d2 = "0.8.10"
bb8 = "0.9"
threadpool = "1.8.1"
tokio-threadpool = "0.1.18"
qstring = "0.7.2"
rand = "0.9.2"
titlecase = "3.2"
rayon = "1.8.0"
chrono = "0.4.31"
geo-types = "0.7"
geo-postgis = "0.2.2"
geo = "0.31"
tarpc = { version = "0.37.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1.40"
tokio-serde = "0.9"
tracing-subscriber = "0.3.17"
futures-util = "0.3.29"
actix_block_ai_crawling = "0.2.11"
actix = "0.13.5"
actix-web-actors = "4.3"
amtk = "0.1.0"
travelling_salesman = "1.1.22"
ordered-float = { version = "5.0.0", features = ["serde"] }
dotenvy = "0.15.7"
seahash = "4.1.0"
dmfr = "0.2"
chateau = { git = "https://github.com/catenarytransit/chateau" }
unwire-gtfs-rt = { git = "https://github.com/catenarytransit/unwire-gtfs-rt" }
rtc-quebec-gtfs-rt = "0.4.2"
dmfr-dataset-reader = "0.2.5"
uuid = { version = "1.15", features = ["v4", "fast-rng", "macro-diagnostics"] }
zip = "6.0"
git2 = "0.20"
zip-extract = "0.4.1"
serde_derive = "1.0.197"
prost = "0.14"
prost-legacy = { package = "prost", version = "0.12" }
geozero = "0.14.0"
diesel = { version = "2.3.2", features = [
    "ipnet-address",
    "network-address",
    "extras",
    "numeric",
    "r2d2",
    "chrono",
    "postgres",
    "64-column-tables",
] }
log = "0.4"
postgis_diesel = "3.0"
diesel-async = { version = "0.7.3", features = ["postgres", "bb8"] }
diesel-derive-newtype = "2.1.1"
async-std = { version = "1.5.3" }
geo-repair-polygon = "0.1.2"
gtfs-translations = "0.1.0"
geojson = { version = "0.24", features = ["geo-types"] }
rstar = "0.12"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
tilejson = "0.4.1"
tile-grid = "0.6"
zstd-safe = "7.2.4"
hitbox = "0.1.1"
cached = { version = "0.55", features = [
    "async_tokio_rt_multi_thread",
    "disk_store",
] }
geo-booleanop = "0.3.2"
random-string = "1.1.0"
argon2 = "0.5.3"
tzf-rs = "1.0"
lazy_static = "1.4.0"
serde_bytes = "0.11"
bincode = { version = "2.0", features = ["serde"] }
evmap = "11.0.0"
dashmap = "6.0"
ipnetwork = "0.21.1"
pnet = "0.35.0"
crossbeam = "0.8.4"
leapfrog = { version = "0.3.0", features = ["stable_alloc"] }
scc = "3.4"
env_logger = "0.11.3"
ron = "0.12.0"
regex = "1.10.4"
fasthash = "0.4.0"
clap = { version = "4.5", features = ["derive", "env"] }
rgb = "0.8.37"
zotgtfs = "0.3.7"
amtrak-gtfs-rt = "0.8.9"
chrono-tz = { version = "0.10.4", features = ["case-insensitive", "serde"] }
ping = "0.7.0"
online = { version = "4.0.2", features = ["tokio-runtime"] }
chicago-gtfs-rt = "0.4.0"
etcd-client = "0.17.0"
ipnet = { version = "2.9.0", features = ["serde"] }
tar = "0.4.41"
bytes = { version = "1.11", features = ["serde", "std"] }
polyline = "0.11.0"
simple-server-timing-header = "0.1.1"
osmpbfreader = { version = "0.19.1", features = ["serde"] }
mime = "0.3.17"
gtfs-realtime = "0.2.0"
via-rail-gtfsrt = "0.3.0"
wyhash2 = "0.2.1"
console-subscriber = "0.5.0"
strumbra = "0.6.0"
strsim = "0.11.0"
compact_str = { version = "0.9.0", features = ["serde", "diesel"] }
urlencoding = "2.1.3"
url = "2.5.2"
slippy-map-tiles = "0.16.0"
geo-buffer = "0.2.0"
actix-cors = "0.7.0"
finite = "0.0.1"
scraper = { version = "0.24.0", features = ["atomic"] }
html-escape = "0.2.13"
byteorder = "1.5.0"
flate2 = { version = "1.1", features = ["zlib-ng"], default-features = false }
ecow = { version = "0.2.3", features = ["serde"] }
tz-search = "0.1.1"
siphasher = "1.0.1"
async-recursion = "1.1.1"
path-clean = "1.0.1"
tokio-stream = { version = "0.1.17", features = ["full"] }
thiserror = "2.0"
elasticsearch = "9.1.0-alpha.1"
language-tags = { version = "0.3.2", features = ["serde"] }
discord-message = "0.1.0"
discord-webhook-rs = "1.0.5"
query-string-builder = "0.6.0"
bytefmt = "0.1.7"
redis = { version = "0.32.7" }
hex = { version = "0.4.3", features = ["serde"] }
sha2 = "0.10.9"
nictd-gtfs-rt = "0.3.3"
geohash = "0.13"
spade = "2.15.0"
delaunator = "1.0.2"
rustix = "1.1.2"
i24 = { version = "2.2.6", features = [
    "alloc",
    "serde",
    "zerocopy",
    "num-cast",
    "std",
] }
flixbus-gtfs-realtime = "0.1.3"
pointy = "0.7.0"
cta-bus-gtfs-realtime = { git = "https://github.com/catenarytransit/cta-bus-gtfs-realtime", version = "0.1.0" }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.1"
datadog-opentelemetry = "0.2.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = "0.6"

[[bin]]
name = "maple"
path = "src/maple/main.rs"

[[bin]]
name = "birch"
path = "src/birch/server.rs"

[[bin]]
name = "aspen"
path = "src/aspen/main.rs"

[[bin]]
name = "aspenleader"
path = "src/aspen/spawn_leader.rs"

[[bin]]
name = "avens"
path = "src/avens/main.rs"

[lib]
name = "catenary"
path = "src/lib.rs"

[[bin]]
name = "spruce"
path = "src/spruce/main.rs"

[[bin]]
name = "alpenrose"
path = "src/alpenrose/main.rs"

#Test binaries

#[[bin]]
#name = "test_maple_syrup"
#path = "src/maple_syrup/test.rs"

[build-dependencies]
prost-build = "0.14.1"

[[bin]]
name = "manual_login_manager"
path = "src/manual_login_manager/main.rs"

#[[bin]]
#name = "test_tarpc"
#path = "src/test_tarpc/main.rs"

[[bin]]
name = "sage"
path = "src/sage/main.rs"

[[bin]]
name = "setup_ip_db"
path = "src/ip_addr_geo_db_update/main.rs"

#[[bin]]
#name = "test_dmfr"
#path = "src/test_dmfr.rs"

#[[bin]]
#name = "osm_extractor"
#path = "src/osm_extractor/main.rs"

[[bin]]
name = "update_vehicles_db"
path = "src/update_vehicles_db/main.rs"


[[bin]]
name = "girolle"
path = "src/maple/girolle/main.rs"

[[bin]]
name = "gentian"
path = "src/gentian/main.rs"

[[bin]]
name = "linnaea"
path = "src/linnaea/main.rs"

[[bin]]
name = "edelweiss"
path = "src/edelweiss/main.rs"

[[bin]]
name = "test_edelweiss_client"
path = "src/test_edelweiss_client/main.rs"

[[bin]]
name = "globeflower"
path = "src/globeflower/main.rs"

[[bin]]
name = "harebell"
path = "src/harebell/main.rs"

[[bin]]
name = "osmstationimport"
path = "src/osmstationimport/main.rs"
